Update swagger and fix transfers
